<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.apromore</groupId>
    <artifactId>apromore-portal-ui-test</artifactId>
    <version>1.0</version>
    <name>Apromore Portal UI Test</name>
    <properties>
        <maven.surefire.plugin>2.14.1</maven.surefire.plugin>
        <surefire.jvm.args>-Xms512m -Xmx4048m -XX:MaxPermSize=1024m</surefire.jvm.args>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <inherited>true</inherited>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin}</version>
                <configuration>
                    <useFile>true</useFile>
                    <printSummary>true</printSummary>
                    <runOrder>alphabetical</runOrder>
                    <failIfNoTests>false</failIfNoTests>
                    <argLine>${surefire.jvm.args}</argLine>
                    <includes>
                        <include>**/*UITest.java</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-server</artifactId>
            <version>3.4.0</version>
        </dependency>
    </dependencies>
</project>
